# shmokemon

./: .gitignore  Cargo.toml  README.md  RL_INTERFACE.md  best_brain_stand_upright.bin.snapshots.txt
examples/: rl_demo.rs
src/: brain.rs  buddy.rs  ga.rs  grabbable_world.rs  lib.rs  main.rs  physics.rs  rl_interface.rs  world.rs
