[package]
name = "two_dbuddy"
version = "0.1.0"
edition = "2021"
default-run = "two_dbuddy"

[dependencies]
macroquad = "0.4"
rapier2d = {version = "0.30.1", features = ["simd-stable"]}
rand = "0.8"
burn = "0.19.1"
burn-tch = "0.19.1"
burn-ndarray = "0.19.1"
rayon = "1.10"

[features]
default = []
mps = []